--- a/packages/design-token/package.json
+++ b/packages/design-token/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "npx token-transformer --expandTypography ./tokens/tokens.json ./build/tokens.json global",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
